testing succeeded, unit tests will come later on

--- a/pardus-support/CMakeLists.txt
+++ b/pardus-support/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Qt3 REQUIRED)
 add_definitions(${QT_DEFINITIONS})
 
 # Include directories
-include_directories(${PARDUS_SOURCE_DIR} ${QT_INCLUDE_DIR})
+include_directories(${QT_INCLUDE_DIR})
 
 # Library search path
 link_directories(${PARDUS_SOURCE_DIR})
@@ -17,10 +17,6 @@ link_directories(${PARDUS_SOURCE_DIR})
 add_library(pardus SHARED string.cpp)
 target_link_libraries(pardus ${QT_LIBRARIES} "-licuuc")
 SET_TARGET_PROPERTIES(pardus PROPERTIES VERSION 1.0 SOVERSION 1)
-
-# Test executable
-add_executable(test "test.cpp")
-target_link_libraries(test ${QT_LIBRARIES} "-lpardus")
 
 # Install
 install(FILES pardus.h DESTINATION include)
