--- a/pardus-support/src/CMakeLists.txt
+++ b/pardus-support/src/CMakeLists.txt
@@ -1,3 +1,9 @@
+# Include directories
+include_directories(${PARDUS_SOURCE_DIR} ${QT_INCLUDE_DIR})
+
+# Library search path
+link_directories(${PARDUS_SOURCE_DIR})
+
 # Create the library
 add_library(pardus SHARED string.cpp)
 target_link_libraries(pardus ${QT_LIBRARIES} "-licuuc")
