--- a/planet/uludag/config.ini
+++ b/planet/uludag/config.ini
@@ -96,3 +96,6 @@ face=http://gokmen.fasafiso.org/pub/head.png
 
 [http://burkinafasafiso.com/feed/]
 name=Ali Işıngör
+
+[http://blog.ateskusu.org/?feed=rss2]
+name=Furkan Duman
