--- a/trunk/planet/uludag/config.ini
+++ b/trunk/planet/uludag/config.ini
@@ -20,9 +20,9 @@ date_format = %d %B %Y @ %I:%M %p
 facewidth = 64
 faceheight = 64
 
-[http://cekirdek.pardus.org.tr/~baris/blog/rss.cgi]
+[http://www.metin.org/gunluk/feed/rss]
 name = Barış Metin
-face = http://cekirdek.pardus.org.tr/~baris/img/baris_hackergotchi.png
+face = http://www.metin.org/static/img/baris_hackergotchi.png
 
 [http://cekirdek.pardus.org.tr/~tekman/zangetsu/blog/feed/rss]
 name = Erkan Tekman
