--- a/tasma/fstab-manager/src/fstab-manager.desktop
+++ b/tasma/fstab-manager/src/fstab-manager.desktop
@@ -8,7 +8,7 @@ Icon=fstab_manager
 X-KDE-ModuleType=Library
 X-KDE-Library=fstab-manager
 X-KDE-FactoryName=fstab_manager
-X-KDE-RootOnly=false
+X-KDE-RootOnly=true
 Type=Application
 Exec=kcmshell fstab-manager
 Categories=QT;KDE;X-KDE-settings-system;X-KDE-tasma-system
