--- a/trunk/tasma/tasma/src/pics/CMakeLists.txt
+++ b/trunk/tasma/tasma/src/pics/CMakeLists.txt
@@ -1,1 +1,1 @@
-INSTALL_FILES(/share/apps/tasma/pics pardus.png tasma_logo.png monitor.png)
+INSTALL_FILES(/share/apps/tasma/pics FILES pardus.png tasma_logo.png monitor.png)
