--- a/trunk/tasma/tasma/src/kfile-plugins/pisi/CMakeLists.txt
+++ b/trunk/tasma/tasma/src/kfile-plugins/pisi/CMakeLists.txt
@@ -11,5 +11,5 @@ KDE3_AUTOMOC(${kfile_pisi_sources})
 KDE3_ADD_KPART(kfile_pisi ${kfile_pisi_sources})
 TARGET_LINK_LIBRARIES(kfile_pisi "-lkio" "-lpython2.4" "-lz" "-liksemel")
 
-INSTALL_FILES(/share/apps/konqueror/servicemenus/ FILES kfile_pisi.desktop)
+INSTALL_FILES(/share/services/ FILES kfile_pisi.desktop)
 INSTALL_TARGETS(/lib/kde3 kfile_pisi)
