--- a/trunk/tasma/tasma/src/kfile-plugins/pisi/CMakeLists.txt
+++ b/trunk/tasma/tasma/src/kfile-plugins/pisi/CMakeLists.txt
@@ -1,5 +1,3 @@
-INCLUDE_DIRECTORIES("-I/usr/include/python2.4")
-
 SET(
   kfile_pisi_sources
   kfile_pisi.cpp
@@ -9,7 +7,7 @@ SET(
 KDE3_AUTOMOC(${kfile_pisi_sources})
 
 KDE3_ADD_KPART(kfile_pisi ${kfile_pisi_sources})
-TARGET_LINK_LIBRARIES(kfile_pisi "-lkio" "-lpython2.4" "-liksemel")
+TARGET_LINK_LIBRARIES(kfile_pisi "-lkio" "-liksemel")
 
 INSTALL_FILES(/share/services/ FILES kfile_pisi.desktop)
 INSTALL_TARGETS(/lib/kde3 kfile_pisi)
