--- a/tasma/tasma/CMakeLists.txt
+++ b/tasma/tasma/CMakeLists.txt
@@ -6,3 +6,6 @@ ADD_SUBDIRECTORY(po)
 ADD_SUBDIRECTORY(applnk)
 ADD_SUBDIRECTORY(modules)
 
+set(CMAKE_SKIP_BUILD_RPATH TRUE)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
