* The default behaviour is if SystemTray is active, mainwindow is hidden. But if this is true and   the user calls package-manager from Tasma, mainwindow should not be hidden.

--- a/tasma/package-manager/src/tasmamanager.desktop
+++ b/tasma/package-manager/src/tasmamanager.desktop
@@ -8,5 +8,5 @@ Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
 Icon=package-manager
 Type=Application
 X-Tasma-Fork=True
-Exec=package-manager
+Exec=package-manager --show-mainwindow
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system
