--- a/trunk/tasma/package-manager/src/tasmamanager.desktop
+++ b/trunk/tasma/package-manager/src/tasmamanager.desktop
@@ -8,5 +8,5 @@ Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
 Icon=package-manager
 Type=Application
 X-Tasma-Fork=True
-Exec=package-manager
+Exec=package-manager --show-mainwindow
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system
