--- a/tasma/network-manager/network-manager.desktop
+++ b/tasma/network-manager/network-manager.desktop
@@ -9,6 +9,7 @@ X-KDE-ModuleType=Library
 X-KDE-Library=network-manager
 X-KDE-FactoryName=network_manager
 X-KDE-RootOnly=false
+X-Tasma-Fork=True
 Type=Application
 Exec=kcmshell network-manager
 Categories=QT;KDE;X-KDE-settings-system;X-KDE-tasma-network
