--- a/tasma/network-manager/network-manager.desktop
+++ b/tasma/network-manager/network-manager.desktop
@@ -10,7 +10,7 @@ X-KDE-ModuleType=Library
 X-KDE-Library=network-manager
 X-KDE-FactoryName=network_manager
 X-KDE-RootOnly=false
-X-Tasma-Fork=True
+X-Tasma-Fork=true
 Type=Application
 Exec=kcmshell network-manager
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-network;
