--- a/tasma/network-manager/network-manager.desktop
+++ b/tasma/network-manager/network-manager.desktop
@@ -12,5 +12,5 @@ X-KDE-FactoryName=network_manager
 X-KDE-RootOnly=false
 X-Tasma-Fork=true
 Type=Application
-Exec=kcmshell network-manager
+Exec=network-manager
 Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-network;
