--- a/trunk/tasma/service-manager/src/service-manager.desktop
+++ b/trunk/tasma/service-manager/src/service-manager.desktop
@@ -9,6 +9,7 @@ X-KDE-ModuleType=Library
 X-KDE-Library=service-manager
 X-KDE-FactoryName=service_manager
 X-KDE-RootOnly=false
+X-Tasma-Fork=true
 Type=Application
-Exec=kcmshell service-manager
-Categories=QT;KDE;X-KDE-settings-system;X-KDE-tasma-system
+Exec=service-manager
+Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system;
