fork by default

--- a/tasma/user-manager/user-manager.desktop
+++ b/tasma/user-manager/user-manager.desktop
@@ -9,7 +9,8 @@ Icon=user.png
 X-KDE-ModuleType=Library
 X-KDE-Library=user-manager
 X-KDE-FactoryName=user_manager
+X-Tasma-Fork=true
 Type=Application
 Icon=kuser
-Exec=kcmshell user-manager
-Categories=QT;KDE;X-KDE-settings-system;X-KDE-tasma-system
+Exec=user-manager
+Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system;
