--- a/tasma/disk-manager/src/disk-manager.desktop
+++ b/tasma/disk-manager/src/disk-manager.desktop
@@ -9,7 +9,7 @@ X-KDE-ModuleType=Library
 X-KDE-Library=disk-manager
 X-KDE-FactoryName=disk_manager
 X-KDE-RootOnly=true
-X-Tasma-Fork=True
+X-Tasma-Fork=true
 Type=Application
-Exec=kcmshell disk-manager
-Categories=QT;KDE;X-KDE-settings-system;X-KDE-tasma-system
+Exec=disk-manager
+Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system;
