--- a/tasma/package-manager/src/packagemanager-helper.desktop
+++ b/tasma/package-manager/src/packagemanager-helper.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Package Manager
 Name[tr]=Paket Yöneticisi
+Name[nl]=Pakketmanager
 Icon=package-manager
 Type=Application
 MimeType=application/x-pisi;
