--- a/tasma/package-manager/src/x-pisi.desktop
+++ b/tasma/package-manager/src/x-pisi.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Comment=PiSi File
 Comment[en]=PiSi File
 Comment[tr]=PiSi Dosyası
+Comment[nl]=PiSi bestand
 MimeType=application/x-pisi
 Patterns=*.pisi
 Type=MimeType
