--- a/tasma/package-manager/src/tasmamanager.desktop
+++ b/tasma/package-manager/src/tasmamanager.desktop
@@ -2,9 +2,11 @@
 Name=Package Manager
 Name[en]=Add,Update or Remove Programs
 Name[tr]=Program Ekle,Güncelle veya Kaldır
+Name[nl]=Toevoegen, bijwerken of verwijderen programma's
 Comment=PiSi Package Manager Graphical User Interface
 Comment[en]=PiSi Package Manager Graphical User Interface
 Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
+Comment[nl]=PiSi pakketmanager grafische gebruikersinterface
 Icon=package-manager
 Type=Application
 X-Tasma-Fork=true
