--- a/trunk/tasma/package-manager/src/packagemanager.desktop
+++ b/trunk/tasma/package-manager/src/packagemanager.desktop
@@ -2,9 +2,11 @@
 Name=Package Manager
 Name[en]=Add or Remove Software
 Name[tr]=Yazılım ekle ve kaldır
+Name[nl]=Toevoegen of verwijderen software
 Comment=PiSi Package Manager Graphical User Interface
 Comment[en]=PiSi Package Manager Graphical User Interface
 Comment[tr]=PiSi Paket Yöneticisi Kullanıcı Grafik Arayüzü
+Comment[nl]=PiSi Pakkermanager grafische gebruikersinterface
 Icon=package-manager
 Type=Application
 Exec=package-manager
