--- a/trunk/tasma/firewall-config/src/firewall-config.desktop
+++ b/trunk/tasma/firewall-config/src/firewall-config.desktop
@@ -1,7 +1,8 @@
 [Desktop Entry]
-Name=Firewall Configuration
-Name[en]=Firewall Configuration
-Name[tr]=Güvenlik Duvarı Ayarları
+Name=Firewall Config
+GenericName=Firewall Configuration
+GenericName[en]=Firewall Configuration
+GenericName[tr]=Güvenlik Duvarı Ayarları
 Comment=Firewall Configuration Interface
 Comment[tr]=Güvenlik Duvarı Ayarları
 Icon=firewall_config
@@ -12,5 +13,4 @@ X-KDE-RootOnly=false
 X-Tasma-Fork=true
 Type=Application
 Exec=firewall-config
-Categories=Qt;KDE;X-KDE-settings-network;X-KDE-tasma-network;
-
+Categories=Qt;KDE;System;X-KDE-settings-network;X-KDE-tasma-network;
