--- a/trunk/tasma/disk-manager/src/disk-manager.desktop
+++ b/trunk/tasma/disk-manager/src/disk-manager.desktop
@@ -1,9 +1,7 @@
 [Desktop Entry]
 Name=Disk Manager
-Name[en]=Disk Manager
-Name[tr]=Disk Yöneticisi
-Comment=A Tasma Module for disk management
-Comment[tr]=Disk yönetiminden sorumlu Tasma Modülü
+GenericName=Disk Management Interface
+GenericName[tr]=Disk Yönetim Arayüzü
 Icon=disk_manager
 X-KDE-ModuleType=Library
 X-KDE-Library=disk-manager
@@ -12,4 +10,4 @@ X-KDE-RootOnly=true
 X-Tasma-Fork=true
 Type=Application
 Exec=disk-manager
-Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system;
+Categories=Qt;KDE;System;X-KDE-settings-system;X-KDE-tasma-system;
