--- a/trunk/tasma/manager-template/hede-manager.desktop
+++ b/trunk/tasma/manager-template/hede-manager.desktop
@@ -1,12 +1,11 @@
 [Desktop Entry]
 Name=Hede Manager
-Name[tr]=Hede Yöneticisi
-Comment=Sample Tasma Module
-Comment[tr]=Örnek Tasma Modülü
+GenericName=Sample Tasma Module
+GenericName[tr]=Örnek Tasma Modülü
 X-KDE-ModuleType=Library
 X-KDE-Library=hede-manager
 X-KDE-FactoryName=hede_manager
 Type=Application
 Icon=hede_manager
 Exec=kcmshell hede-manager
-Categories=QT;KDE;X-KDE-settings-system;X-KDE-tasma-system
+Categories=QT;KDE;System;X-KDE-settings-system;X-KDE-tasma-system
