--- a/tasma/user-manager/user-manager.desktop
+++ b/tasma/user-manager/user-manager.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=User Manager
+Name[tr]=Kullanıcı Yöneticisi
 GenericName=Add and Remove User
 GenericName[tr]=Kullanıcı Ekle ve Çıkart
 GenericName[nl]=Toevoegen en verwijderen van gebruiker
