--- a/tasma/network-manager/network-manager.desktop
+++ b/tasma/network-manager/network-manager.desktop
@@ -14,4 +14,4 @@ X-KDE-RootOnly=false
 X-Tasma-Fork=true
 Type=Application
 Exec=network-manager
-Categories=Qt;KDE;System;X-KDE-settings-system;X-KDE-tasma-network;
+Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-network;
