don't show up in KDE menu

--- a/tasma/user-manager/user-manager.desktop
+++ b/tasma/user-manager/user-manager.desktop
@@ -15,4 +15,4 @@ X-Tasma-Fork=true
 Type=Application
 Icon=kuser
 Exec=user-manager
-Categories=Qt;KDE;System;X-KDE-settings-system;X-KDE-tasma-system;
+Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system;
