--- a/tasma/manager-template/hede-manager.desktop
+++ b/tasma/manager-template/hede-manager.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Hede Manager
+Name[tr]=Hede Yöneticisi
 GenericName=Sample Tasma Module
 GenericName[tr]=Örnek Tasma Modülü
 X-KDE-ModuleType=Library
@@ -8,4 +9,4 @@ X-KDE-FactoryName=hede_manager
 Type=Application
 Icon=hede_manager
 Exec=kcmshell hede-manager
-Categories=QT;KDE;System;X-KDE-settings-system;X-KDE-tasma-system
+Categories=QT;KDE;X-KDE-settings-system;X-KDE-tasma-system
