--- a/tasma/service-manager/src/service-manager.desktop
+++ b/tasma/service-manager/src/service-manager.desktop
@@ -11,4 +11,4 @@ X-KDE-RootOnly=false
 X-Tasma-Fork=true
 Type=Application
 Exec=service-manager
-Categories=Qt;KDE;System;X-KDE-settings-system;X-KDE-tasma-system;
+Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system;
