--- a/trunk/tasma/disk-manager/src/disk-manager.desktop
+++ b/trunk/tasma/disk-manager/src/disk-manager.desktop
@@ -11,4 +11,4 @@ X-KDE-RootOnly=true
 X-Tasma-Fork=true
 Type=Application
 Exec=disk-manager
-Categories=Qt;KDE;X-KDE-settings-system;X-KDE-tasma-system;
+Categories=Qt;KDE;System;X-KDE-settings-system;X-KDE-tasma-system;
