--- a/tasma/firewall-config/src/firewall-config.desktop
+++ b/tasma/firewall-config/src/firewall-config.desktop
@@ -14,4 +14,4 @@ X-KDE-RootOnly=false
 X-Tasma-Fork=true
 Type=Application
 Exec=firewall-config
-Categories=Qt;KDE;X-KDE-settings-network;X-KDE-tasma-network;
+Categories=Qt;KDE;System;X-KDE-settings-network;X-KDE-tasma-network;
