--- a/tasma/package-manager/src/packagemanager.desktop
+++ b/tasma/package-manager/src/packagemanager.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Package Manager
+Name[tr]=Paket Yöneticisi
 GenericName[en]=Add or Remove Software
 GenericName[tr]=Yazılım ekle ve kaldır
 Name[nl]=Toevoegen of verwijderen software
