--- a/tasma/tasma/applnk/desktop/tasmaarts.desktop
+++ b/tasma/tasma/applnk/desktop/tasmaarts.desktop
@@ -13,13 +13,16 @@ X-KDE-ParentApp=tasma
 Name=Sound System
 Name[tr]=Ses Sistemi
 Name[nl]=Geluidssysteem
+Name[es]=Sonido
 
 Comment=Sound System Configuration
 Comment[tr]=Ses Sistemi Yapılandırması
 Comment[nl]=Geluidssysteem instellen
+Comment[es]=Configuración de Sonido
 
 Keywords=aRts,Sound Server,artsd,Audio,Sound,startup,network transparency,transparency,priority,duplex,full duplex,response time,Mixer,Volume,KMix,Mix,login,MIDI,synthesizer,music
 Keywords[tr]=aRts,Ses Sunucu,artsd,Ses,Ses,Başlangıç,ağ geçirgenliği,geçirgenlik,öncelik,dubleks,tam dubleks,karşılık süresi,MIDI,karıştırıcı,Kmix
 Keywords[nl]=aRts,sound server,artsd,audio,sound,geluidsserver,geluid,opstarten,netwerk ,netwerktransparantie,priority,prioriteit,duplex,full duplex,response time,responstijd,volume,KMix,kanalen,login,aanmelden,synthesizer,muziek,mixer,midi,
+Keywords[es]=aRts,servidor de sonido,artsd,audio,inicio,transparencia de red,transparencia,prioridad,duplex,full duplex,tiempo de respuesta,Mezclador,Volumen,KMix,Mix,login,MIDI,sintetizador,musica
 
 Categories=Qt;KDE;X-KDE-settings-sound;X-KDE-tasma-sound
