--- a/tasma/tasma/applnk/desktop/tasmacomponentchooser.desktop
+++ b/tasma/tasma/applnk/desktop/tasmacomponentchooser.desktop
@@ -12,13 +12,16 @@ X-KDE-ParentApp=tasma
 Name=Component Chooser
 Name[tr]=Bileşen Seçici
 Name[nl]=Componentenkiezer
+Name[es]=Selector de Componentes
 
 Comment=Choose the default components for various services
 Comment[tr]=Çeşitli servisler için öntanımlı bileşenleri seçin
 Comment[nl]=Kies de standaardcomponenten voor diverse services
+Comment[es]=Eliga los componentes por defecto para varios servicios
 
 Keywords=components,component chooser,resources, email client, terminal emulator
 Keywords[tr]=bileşenler,bileşen seçici,kaynaklar,e-posta istemcisi,terminal emülasyonu
 Keywords[nl]=componentenkiezer,gegevensbronnen,e-mailprogramma,terminal
+Keywords[es]=componentes,Selector de componentes,recursos,cliente email,emulador de terminal
 
 Categories=Qt;KDE;X-KDE-settings-components;X-KDE-tasma-desktop
