--- a/tasma/tasma/applnk/desktop/tasmacrypto.desktop
+++ b/tasma/tasma/applnk/desktop/tasmacrypto.desktop
@@ -11,13 +11,16 @@ X-KDE-ParentApp=tasma
 Name=Crypto
 Name[tr]=Şifreleme
 Name[nl]=Cryptografie
+Name[es]=Criptografía
 
 Comment=Configure SSL, manage certificates, and other cryptography settings
 Comment[tr]=SSL,sertifika,sertifika ayarları,diğer şifreleme ayarları
 Comment[nl]=Hier kunt u SSL, certificatenbeheer en andere cryptografische instellingen wijzigen
+Comment[es]=Configurar SSL, administrar certificados y otros parámetros de criptografía
 
 Keywords=Crypto,Krypto,Cryptography,encryption,SSL,https,certificates,ciphers,TLS,secure,security
 Keywords[tr]=Şifre,şifreleme,şifrebilim,SSL,https,sertifika,TLS,güvenlik,güvenli
 Keywords[nl]=crypto,krypto,cryptografie,encryptie,ssl,https,certificaten,ciphers,tls,beveiliging,veilig,codering,gecodeerd,versleuteling
+Keywords[es]=crypto,krypto,criptografía,encriptación,ssl,https,certificados,ciphers,tls,seguro,seguridad
 
 Categories=Qt;KDE;X-KDE-settings-security;X-KDE-tasma-useraccount
