--- a/tasma/tasma/applnk/desktop/tasmakcm_useraccount.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakcm_useraccount.desktop
@@ -9,13 +9,17 @@ Exec=kcmshell kcm_useraccount
 Name=Password & User Account
 Name[tr]=Parola & Kullanıcı Hesabı
 Name[nl]=Wachtwoord en gebruikerbeheer
+Name[es]=Contraseña & Cuenta de Usuario
+Name[de]=Passwort & Benutzerkonto
 
 Keywords=password;email;name;organization;realname;login image;face; echo mode;
 Keywords[tr]=parola,e-posta,isim,gerçek isim,giriş resmi,yüz
 Keywords[nl]=wachtwoord,e-mail,organisatie,naam,login,aanmelden,afbeelding,gezicht,echo,asterisk
+Keywords[es]=contraseña,email,nombre,organización,nombre real,imagen de login,cara,modo de echo
 
 Comment=User information such as password, name and email
 Comment[tr]=Parola, isim ve e-posta gibi kullanıcı bilgisi
 Comment[nl]=Gebruikerinformatie zoals wachtwoord, naam en e-mailadres
+Comment[es]=Información de usuario: contraseña, nombre, email, etc.
 
 Categories=QT;KDE;X-KDE-settings-security;X-KDE-tasma-useraccount
