--- a/tasma/tasma/applnk/desktop/tasmakcmtaskbar.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakcmtaskbar.desktop
@@ -13,13 +13,16 @@ X-KDE-ParentApp=tasma
 Name=Taskbar
 Name[tr]=Görev Çubuğu
 Name[nl]=Taakbalk
+Name[es]=Barra de Tareas
 
 Comment=Configure the panel taskbar
 Comment[tr]=Panel görev çubuğunu yapılandır
 Comment[nl]=Hier kunt u de taakbalk van het paneel instellen
+Comment[es]=Configuración de barra de tareas del panel
 
 Keywords=kicker,panel,kpanel,taskbar,startbar,launchbar,windows
 Keywords[tr]=kicker,panel,kpanel,görev çubuğu,başlangıç çubuğu,yükleme çubuğu,pencere,pencereler
 Keywords[nl]=kicker,panel,paneel,kpanel,takenbalk,startbalk,launchbar,startmenu,vensters,taakbalk
+Keywords[es]=kicker,panel,kpanel,barra de tareas,barra de inicio,launchbar,ventanas
 
 Categories=Qt;KDE;X-KDE-settings-desktop;X-KDE-tasma-desktop
