--- a/tasma/tasma/applnk/desktop/tasmakeyboard_layout.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakeyboard_layout.desktop
@@ -14,13 +14,16 @@ X-KDE-ParentApp=tasma
 Name=Keyboard Layout
 Name[tr]=Klavye Düzeni
 Name[nl]=Toetsenbordindeling
+Name[es]=Distribución de Teclado
 
 Comment=Keyboard Layout
 Comment[tr]=Klavye Düzeni
 Comment[nl]=Toetsenbordindeling
+Comment[es]=Distribución de Teclado
 
 Keywords=Keyboard,Layout,International
 Keywords[tr]=Klavye,Yerleşim,Düzen,Uluslararası
 Keywords[nl]=keyboard,toetsenbord,keyboard layout,toetsenbordindeling,input devices,invoerapparaten,randapparaten
+Keywords[es]=Teclado,Layout,Internacional
 
 Categories=Qt;KDE;X-KDE-settings-accessibility;X-KDE-tasma-peripherals
