--- a/tasma/tasma/applnk/desktop/tasmamouse.desktop
+++ b/tasma/tasma/applnk/desktop/tasmamouse.desktop
@@ -14,13 +14,16 @@ X-KDE-ParentApp=tasma
 Name=Mouse
 Name[tr]=Fare
 Name[nl]=Muis
+Name[es]=Ratón
 
 Comment=Mouse settings
 Comment[tr]=Fare ayarları
 Comment[nl]=Muisinstellingen
+Comment[es]=Configuración de Ratón
 
 Keywords=Mouse,Mouse acceleration,Mouse threshold,Mouse buttons,Selection,Cursor Shape,Input Devices,Button Mapping,Click,icons,feedback,Pointers,Drag,DoubleClick,mapping,right handed,left handed
 Keywords[tr]=fare,Fare Hızlandırma,Fare eşiği,Fare Tuşları,Seçim,imleç şekli,girdi aygıtları,Tuş Haritası,Tıklama,simgeler,geri besleme,İşaretçiler,Taşı,Çift Tıkla,haritalama,sağ elli,sol elli
 Keywords[nl]=muis,muissnelheid,muisknoppen,selectie,cursor-uiterlijk,input devices,invoerapparaten,knopindeling,klikken,iconen,pictogrammen,icons,aanwijzers,pointers,drag,verslepen,dubbelklikken,linkshandig,rechtshandig.randapparaten
+Keywords[es]=Ratón,aceleración de ratón,Mouse threshold,botones de ratón,Selección,Forma de cursor,Dispositivo de entrada,Mapo de botones,Clic,iconos,retroalimentación,Punteros,Drag,DobleClic,mapeo,diestro,zurdo
 
 Categories=Qt;KDE;X-KDE-settings-peripherals;X-KDE-tasma-peripherals
