--- a/tasma/tasma/applnk/desktop/tasmaprinters.desktop
+++ b/tasma/tasma/applnk/desktop/tasmaprinters.desktop
@@ -13,13 +13,17 @@ X-KDE-HasReadOnlyMode=true
 
 Name=Printers
 Name[tr]=Yazıcılar
+Name[es]=Impresoras
+Name[de]=Drucker
 
 Comment=Printing system configuration (printers, jobs, classes, ...)
 Comment[tr]=Yazdırma sistemi kurulumu (yazıcılar, işler, sınıflar, ...)
 Comment[nl]=Configuratie van het afdruksysteem (printers, taken, klassen, ...)
+Comment[es]=Configuración del sistema de impresión (impresorasa, tareas de impresión, clases, ...)
 
 Keywords=print,printer,printing management
 Keywords[tr]=yazdır,yazıcı,yazıcı yönetimi
 Keywords[nl]=print,printer,printing management,afdrukbeheer,afdrukken
+Keywords[es]=imprimir,impresora,administración de impresión
 
 Categories=Qt;KDE;X-KDE-settings-peripherals;X-KDE-tasma-peripherals
