es help, .desktop cleanup

--- a/tasma/user-manager/user-manager.desktop
+++ b/tasma/user-manager/user-manager.desktop
@@ -1,13 +1,9 @@
 [Desktop Entry]
 Name=User Manager
 Name[tr]=Kullanıcı Yöneticisi
-GenericName=Add and Remove User
-GenericName[tr]=Kullanıcı Ekle ve Çıkart
-GenericName[nl]=Toevoegen en verwijderen van gebruiker
-Comment=User Management Interface
-Comment[tr]=Kullanıcı Yönetimi Arayüzü
-Comment[nl]=Gebruikersbeheer interface
-Icon=user.png
+Name[nl]=Toevoegen en verwijderen van gebruiker
+Name[es]=Agregar y Eliminar Usuario
+Name[de]=Benutzer Hinzufügen und Entfernen
 X-KDE-ModuleType=Library
 X-KDE-Library=user-manager
 X-KDE-FactoryName=user_manager
