Kaptan the next-generation
 CMakeLists.txt       |    1
 ChangeLog            |    5 +
 TODO                 |    2
 po/es.po             |  168 +++++++++++++++++++++++---------------
 src/CMakeLists.txt   |   10 +-
 src/goodbye.cpp      |   25 +++--
 src/goodbye.h        |   10 +-
 src/goodbyedlg.ui    |   38 +++-----
 src/kaptan.cpp       |   97 ++++++++++++----------
 src/kaptan.h         |   21 ++--
 src/main.cpp         |   20 ++--
 src/mouse.cpp        |  142 +++++++++++++++++---------------
 src/mouse.h          |   20 +---
 src/mousedlg.ui      |  210 ++++++++++++++++++++++++++++++------------------
 src/mousesetupdlg.ui |  147 ----------------------------------
 src/network.cpp      |   70 ++++++++++++++++
 src/network.h        |   36 ++++++++
 src/networkdlg.ui    |   36 ++++++++
 src/package.cpp      |   61 ++++++++++++++
 src/package.h        |   29 ++++++
 src/packagedlg.ui    |  142 ++++++++++++++++++++++++++++++++
 src/style.cpp        |  146 +++++++++++++++++++++++++++++++++
 src/style.h          |   38 ++++++++
 src/styledlg.ui      |   91 +++++++++++++++++++++
 src/wallpaper.cpp    |  136 ++++++++++++-------------------
 src/wallpaper.h      |   10 +-
 src/wallpaperdlg.ui  |  220 +++++++++++++++++++++++++--------------------------
 src/welcome.cpp      |   20 +---
 src/welcome.h        |    4
 src/welcomedlg.ui    |  116 +++++++-------------------
 30 files changed, 1299 insertions(+), 772 deletions(-)

--- a/kaptan/src/CMakeLists.txt
+++ b/kaptan/src/CMakeLists.txt
@@ -6,7 +6,10 @@ SET(
   kaptan_sources
   welcome.cpp
   mouse.cpp
+  style.cpp
   wallpaper.cpp
+  network.cpp
+  package.cpp
   goodbye.cpp
   kaptan.cpp
   main.cpp
@@ -17,8 +20,11 @@ KDE3_AUTOMOC(${kaptan_sources})
 SET(
   kaptan_ui
   welcomedlg.ui
-  mousesetupdlg.ui
+  mousedlg.ui
+  styledlg.ui
   wallpaperdlg.ui
+  networkdlg.ui
+  packagedlg.ui
   goodbyedlg.ui
   )
 
@@ -29,6 +35,6 @@ TARGET_LINK_LIBRARIES(kaptan ${QT_AND_KDECORE_LIBS} kdeui)
 
 INSTALL_TARGETS(/bin kaptan)
 INSTALL_FILES(/share/applications/kde FILES kaptan.desktop)
-INSTALL_FILES(/share/apps/kaptan/pics FILES kaptan_pardus.png kaptan.png mouse_rh.png mouse_lh.png kaptan_goodbye.png)
+INSTALL_FILES(/share/apps/kaptan/pics FILES kaptan.png mouse_rh.png mouse_lh.png kaptan_goodbye.png pisi.png)
 
 KDE3_INSTALL_ICONS(hicolor)
