tasmakeyboard.desktop almancada kücük degistirme

--- a/tasma/tasma/applnk/desktop/tasmakeyboard.desktop
+++ b/tasma/tasma/applnk/desktop/tasmakeyboard.desktop
@@ -98,7 +98,7 @@ Comment[ca]=Arranjament del teclat
 Comment[cs]=Nastavení klávesnice
 Comment[cy]=Gosodiadau Bysellfwrdd
 Comment[da]=Tastaturindstillinger
-Comment[de]=Einstellung der Tastatur
+Comment[de]=Tastatureinstellungen
 Comment[el]=Ρυθμίσεις Πληκτρολογίου
 Comment[eo]=Agordo de la klavaro
 Comment[es]=Preferencias del teclado
