Time to release, new style added, pot generation method added, color scheme removed etc..

--- a/kaptan/themes/CMakeLists.txt
+++ b/kaptan/themes/CMakeLists.txt
@@ -1,3 +1,4 @@
-ADD_SUBDIRECTORY(NextGeneration)
-ADD_SUBDIRECTORY(Classic)
 ADD_SUBDIRECTORY(Modern)
+ADD_SUBDIRECTORY(Classic)
+ADD_SUBDIRECTORY(Transparent)
+ADD_SUBDIRECTORY(NextGeneration)
