netw-applet.desktopa almanca ceviri

--- a/tasma/network-manager/network-applet.desktop
+++ b/tasma/network-manager/network-applet.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Network Applet
 Name[tr]=Ağ Programcığı
+Name[de]=Netzwerk Applet
 Icon=network
 Type=Application
 Exec=network-applet
